--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,10 @@
                 <li><a href="#">View All</a></li>
               </ul>
             </li>
+            <div ng-app="directive.g+signin">
+  <google-plus-signin clientid="831491199430-80elp5cleulr6rc317b0dtbq7ce0ga5p.apps.googleusercontent.com"></google-plus-signin>
+  <p>^ This is a Google Plus sign-in button</p>
+</div>
             <li class="dropdown user-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -100,9 +104,11 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
    <script src="lib/ng-upload/ng-upload.min.js"></script>
+
 <!-- Otras llibrerias -->
   <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
  <script src="lib/jquery/jquery-2.1.0.min.js"></script>
+<script src="lib/g+/google-plus-signin.js"></script>
 
 
 
