--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en" ng-app="proyectosApp">
 <head>
@@ -11,77 +12,10 @@
     <link href="css/sb-admin.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
-<body ng-controller='mainController' >
+<body  >
 <div id="wrapper">
 
-      <!-- Sidebar -->
-      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Gestion de Proyectos KCC</a>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav side-nav">
-            <li><a href="#/dashboard"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i> Solicitud de Proyectos <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Crear Solicitud de Proyecto</a></li>
-                <li><a href="#">Mis Solicitudes</a></li>
-                <li><a href="#">Anexos de Solicitudes</a></li>
-              </ul>
-            </li>
-            <li><a href="charts.html"><i class="fa fa-edit"></i> Aprobaciones Pendientes</a></li>
-             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-caret-square-o-down"></i>  Proyectos <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#/crearProyecto">Crear Proyecto</a></li>
-                <li><a href="#/misProyectos">Mis Proyectos</a></li>
-                <li><a href="#">Anexos de Proyectos</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right navbar-user">
-           
-            <li class="dropdown alerts-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> Alertas <span class="badge">3</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Default <span class="label label-default">Default</span></a></li>
-                <li><a href="#">Primary <span class="label label-primary">Primary</span></a></li>
-                <li><a href="#">Success <span class="label label-success">Success</span></a></li>
-                <li><a href="#">Info <span class="label label-info">Info</span></a></li>
-                <li><a href="#">Warning <span class="label label-warning">Warning</span></a></li>
-                <li><a href="#">Danger <span class="label label-danger">Danger</span></a></li>
-                <li class="divider"></li>
-                <li><a href="#">View All</a></li>
-              </ul>
-            </li>
-            <div ng-app="directive.g+signin">
-  <google-plus-signin clientid="831491199430-80elp5cleulr6rc317b0dtbq7ce0ga5p.apps.googleusercontent.com"></google-plus-signin>
-  <p>^ This is a Google Plus sign-in button</p>
-</div>
-            <li class="dropdown user-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-                <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </nav>
 
       <div ng-view id="page-wrapper">
 
