--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,14 @@
     <!-- Add custom CSS here -->
     <link href="css/sb-admin.css" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+
+     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+
+    <!-- Add custom CSS here -->
+    <link href="css/landing-page.css" rel="stylesheet">
 </head>
 <body  >
-<div id="wrapper">
+
 
 
 
@@ -23,7 +28,6 @@
 
       </div><!-- /#page-wrapper -->
 
-    </div><!-- /#wrapper -->
  
 
   <!-- In production use:
@@ -43,6 +47,7 @@
   <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
  <script src="lib/jquery/jquery-2.1.0.min.js"></script>
 <script src="lib/g+/google-plus-signin.js"></script>
+<script src="lib/g+/gapi.js"></script>
 
 
 
