se agrega los cambios en el anexo

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <title>Gestion de Proyectos KCC</title>
   <link rel="stylesheet" href="css/app.css"/>
   <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <link href="css/sb-admin.css" rel="stylesheet">
@@ -54,11 +54,11 @@
   <script src="js/directives.js"></script>
       <script src="js/factory.js"></script>
    <script src="js/constants.js"></script>
-   <script src="lib/ng-upload/ng-upload.min.js"></script>
+  <!--  <script src="lib/ng-upload/ng-upload.min.js"></script> -->
       <script src="lib/angular-ui/angular-ui-router.js"></script>
 
 <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-
+<script src="lib/file-upload/angular-file-upload.min.js"></script>
 
 
 </body>
