--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-<script src="lib/g+/gapi.js"></script> 
+<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
@@ -54,6 +54,7 @@
   <script src="js/directives.js"></script>
       <script src="js/factory.js"></script>
    <script src="js/constants.js"></script>
+      <script src="js/models/provider.js"></script>
   <!--  <script src="lib/ng-upload/ng-upload.min.js"></script> -->
       <script src="lib/angular-ui/angular-ui-router.js"></script>
 
